--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-inlinesvg": "^4.1.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3"
   },
@@ -27,3 +29,5 @@
     "vite": "^5.0.0"
   }
 }
+
+
