--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^4.1.0",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.19.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -29,5 +32,3 @@
     "vite": "^5.0.0"
   }
 }
-
-
